static/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Signika:wght@400;500&display=swap');

.navbar-custom { 
    background-color: #376E6F; 
}

.navbar-custom .navbar-text { 
    color: #fff; 
} 

.navbar-custom .navbar-nav .nav-link {
    color: rgb(223, 223, 223);
    font-size: 14pt;
    font-family: 'Signika', sans-serif;
    font-weight: 500;
}

.navbar-custom .nav-item.active .nav-link,
.navbar-custom .nav-item:hover .nav-link {
    color: #ffffff;
}

/* body {
    background-color: #425869;
} */

footer {
    background-color: #376E6F; 
}

/*Use everywhere*/

.text-center{
    text-align: center;
}

h1, h2, h3, h5 {
    font-family: 'Signika', sans-serif;
    font-weight: 400;
}

.muted {
    font-family: 'Signika', sans-serif;
    font-weight: 400;
    font-size: 12pt;
    color: #fff;
}

.text-custom {
    font-family: 'Signika', sans-serif;
    font-weight: 400;
    color: #fff;
}

.font-custom {
    font-family: 'Signika', sans-serif;
    font-weight: 400;
}

main.container {
    height: 100vh;
}

